News: prevent horizontal scrolling from overflow

--- a/news/app.css
+++ b/news/app.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Segoe UI", "Open Sans";
+    overflow-x: hidden;
 }
 :root {
     --fluent-theme-color: #FF4343;
